--- a/index.html
+++ b/index.html
@@ -96,5 +96,419 @@
     }
     .option-btn.correct {
       background: #c9f7d4;
-      border-color: #
-
+      border-color: #12bb5b;
+      color: #16743a;
+    }
+    .option-btn.incorrect {
+      background: #ffeaea;
+      border-color: #e74c3c;
+      color: #d61b1b;
+    }
+    .option-btn:disabled {
+      cursor: default;
+      opacity: 0.87;
+    }
+    .feedback {
+      min-height: 38px;
+      text-align: center;
+      margin: 7px 0 12px 0;
+      font-size: 1em;
+    }
+    .feedback.correct {
+      color: #16743a;
+    }
+    .feedback.incorrect {
+      color: #d61b1b;
+    }
+    .btn-row {
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      margin-bottom: 16px;
+    }
+    .main-btn {
+      background: #3282e5;
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      padding: 12px 26px;
+      font-size: 1em;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 1px 4px #0002;
+      transition: background 0.2s;
+    }
+    .main-btn:hover, .main-btn:focus {
+      background: #2461ac;
+    }
+    .leaderboard {
+      margin-top: 24px;
+      background: #f3f6fa;
+      padding: 12px;
+      border-radius: 10px;
+    }
+    .leaderboard h3 {
+      margin: 0 0 8px 0;
+      font-size: 1.1em;
+      text-align: center;
+    }
+    .leaderboard-list {
+      display: flex;
+      flex-direction: column;
+      gap: 7px;
+    }
+    .leaderboard-item {
+      display: flex;
+      justify-content: space-between;
+      font-size: 0.98em;
+      padding: 2px 0;
+    }
+    @media (max-width: 600px) {
+      .container {
+        padding: 12px 2vw 18px 2vw;
+        border-radius: 0;
+        box-shadow: none;
+        min-height: 100vh;
+      }
+      h1 {
+        font-size: 1.5em;
+      }
+      .subtitle {
+        font-size: 1em;
+      }
+      .question {
+        font-size: 1em;
+        min-height: 40px;
+      }
+      .main-btn, .option-btn {
+        font-size: 1em;
+        padding: 10px 8px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>🤖 AI and US</h1>
+    <div class="subtitle">Test your understanding of AI definitions and concepts</div>
+    <div class="status-row">
+      <div id="levelStatus" class="status">Level 1</div>
+      <div id="scoreStatus" class="status">Score: 0</div>
+      <div id="timerStatus" class="status timer" style="display:none;">30s</div>
+    </div>
+    <div class="progress-bar"><div id="progress" class="progress"></div></div>
+    <div id="question" class="question">Click "Start Quiz" to begin!</div>
+    <div id="options" class="options" style="display:none;"></div>
+    <div id="feedback" class="feedback"></div>
+    <div class="btn-row">
+      <button id="startBtn" class="main-btn">Start Quiz</button>
+      <button id="nextBtn" class="main-btn" style="display:none;">Next</button>
+      <button id="restartBtn" class="main-btn" style="display:none;">Restart</button>
+    </div>
+    <div class="leaderboard" id="leaderboard" style="display:none;">
+      <h3>🏆 Leaderboard</h3>
+      <div id="leaderboardList" class="leaderboard-list"></div>
+    </div>
+  </div>
+  <script>
+    const questions = [
+      {
+        question: "What is Artificial Intelligence (AI)?",
+        options: [
+          "A system that can only store data",
+          "A system that mimics human intelligence to perform tasks",
+          "A tool for sending emails automatically",
+          "A type of computer virus"
+        ],
+        correct: 1,
+        explanation: "AI is the simulation of human intelligence in machines programmed to think and learn."
+      },
+      {
+        question: "What is Machine Learning?",
+        options: [
+          "A machine that learns to dance",
+          "A set of rules for computers to follow",
+          "A subset of AI where systems learn from data",
+          "A programming language"
+        ],
+        correct: 2,
+        explanation: "Machine Learning lets computers learn from data and make predictions or decisions."
+      },
+      {
+        question: "Which of the following is NOT an example of AI?",
+        options: [
+          "Face recognition in smartphones",
+          "Spam filters in email",
+          "A standard calculator",
+          "Voice assistants like Siri or Alexa"
+        ],
+        correct: 2,
+        explanation: "A standard calculator follows fixed rules and does not use AI."
+      },
+      {
+        question: "What is 'training data' in AI?",
+        options: [
+          "Data used to teach an AI model",
+          "A fitness program for robots",
+          "Encrypted messages",
+          "A backup of important files"
+        ],
+        correct: 0,
+        explanation: "Training data is used to teach AI models to recognize patterns and make decisions."
+      },
+      {
+        question: "What does 'NLP' stand for?",
+        options: [
+          "Natural Language Processing",
+          "Neural Logic Protocol",
+          "National Learning Program",
+          "Networked Language Platform"
+        ],
+        correct: 0,
+        explanation: "NLP means Natural Language Processing, helping computers understand human language."
+      },
+      {
+        question: "Which is a benefit of AI?",
+        options: [
+          "It never makes mistakes",
+          "It can automate repetitive tasks",
+          "It works without electricity",
+          "It can replace all humans"
+        ],
+        correct: 1,
+        explanation: "AI can automate repetitive tasks, freeing humans for creative work."
+      },
+      {
+        question: "What is 'bias' in AI?",
+        options: [
+          "A type of programming bug",
+          "Unfairness in how an AI system makes decisions",
+          "A fast computer chip",
+          "A way to speed up training"
+        ],
+        correct: 1,
+        explanation: "Bias in AI means the model makes unfair or prejudiced decisions due to bad data or design."
+      },
+      {
+        question: "Which is a common use of AI in daily life?",
+        options: [
+          "Weather prediction",
+          "Predicting earthquakes instantly",
+          "Fixing broken touch screens",
+          "Growing food in space"
+        ],
+        correct: 0,
+        explanation: "AI is used for weather prediction, voice assistants, recommendations, and more."
+      },
+      {
+        question: "What is 'deep learning'?",
+        options: [
+          "A type of underwater robot",
+          "A method in AI using layered neural networks",
+          "A way to memorize facts",
+          "A slow learning process"
+        ],
+        correct: 1,
+        explanation: "Deep learning uses neural networks with many layers for complex tasks like image and speech recognition."
+      },
+      {
+        question: "What should be considered when using AI?",
+        options: [
+          "Ethical implications and fairness",
+          "Its favorite color",
+          "How often it blinks",
+          "If it can swim"
+        ],
+        correct: 0,
+        explanation: "It's important to consider ethics, bias, and fairness when designing and using AI."
+      }
+    ];
+
+    let currentLevel = 0;
+    let currentScore = 0;
+    let timer = null;
+    let timeLeft = 30;
+    let gameActive = false;
+    const totalLevels = questions.length;
+
+    const levelStatus = document.getElementById('levelStatus');
+    const scoreStatus = document.getElementById('scoreStatus');
+    const timerStatus = document.getElementById('timerStatus');
+    const progress = document.getElementById('progress');
+    const questionDiv = document.getElementById('question');
+    const optionsDiv = document.getElementById('options');
+    const feedbackDiv = document.getElementById('feedback');
+    const startBtn = document.getElementById('startBtn');
+    const nextBtn = document.getElementById('nextBtn');
+    const restartBtn = document.getElementById('restartBtn');
+    const leaderboardDiv = document.getElementById('leaderboard');
+    const leaderboardList = document.getElementById('leaderboardList');
+
+    startBtn.onclick = startQuiz;
+    nextBtn.onclick = nextLevel;
+    restartBtn.onclick = restartQuiz;
+
+    function show(el) { el.style.display = ''; }
+    function hide(el) { el.style.display = 'none'; }
+
+    function setStatus() {
+      levelStatus.textContent = `Level ${currentLevel+1}`;
+      scoreStatus.textContent = `Score: ${currentScore}`;
+      let pct = (currentLevel / totalLevels) * 100;
+      progress.style.width = pct + '%';
+    }
+
+    function startQuiz() {
+      currentLevel = 0;
+      currentScore = 0;
+      gameActive = true;
+      setStatus();
+      hide(startBtn);
+      hide(restartBtn);
+      hide(nextBtn);
+      show(optionsDiv);
+      feedbackDiv.textContent = '';
+      show(questionDiv);
+      show(progress.parentNode);
+      show(levelStatus);
+      show(scoreStatus);
+      hide(leaderboardDiv);
+      nextQuestion();
+    }
+
+    function nextLevel() {
+      currentLevel++;
+      if (currentLevel >= totalLevels) {
+        endGame();
+      } else {
+        nextQuestion();
+      }
+    }
+
+    function nextQuestion() {
+      setStatus();
+      feedbackDiv.textContent = '';
+      hide(nextBtn);
+      hide(restartBtn);
+      const q = questions[currentLevel];
+      questionDiv.textContent = q.question;
+      optionsDiv.innerHTML = '';
+      q.options.forEach((text, idx) => {
+        const btn = document.createElement('button');
+        btn.className = 'option-btn';
+        btn.textContent = text;
+        btn.onclick = () => selectAnswer(idx);
+        btn.setAttribute('tabindex', 0);
+        optionsDiv.appendChild(btn);
+      });
+      show(optionsDiv);
+      timeLeft = 30;
+      timerStatus.textContent = `${timeLeft}s`;
+      timerStatus.style.display = '';
+      runTimer();
+    }
+
+    function runTimer() {
+      clearInterval(timer);
+      timer = setInterval(() => {
+        timeLeft--;
+        timerStatus.textContent = `${timeLeft}s`;
+        if (timeLeft <= 0) {
+          clearInterval(timer);
+          handleTimeout();
+        }
+      }, 1000);
+    }
+
+    function selectAnswer(idx) {
+      if (!gameActive) return;
+      clearInterval(timer);
+      const q = questions[currentLevel];
+      const correct = q.correct;
+      const btns = optionsDiv.querySelectorAll('button');
+      btns.forEach((btn, i) => {
+        btn.disabled = true;
+        if (i === correct) btn.classList.add('correct');
+        else if (i === idx) btn.classList.add('incorrect');
+      });
+      if (idx === correct) {
+        currentScore += 100;
+        feedbackDiv.textContent = "✅ Correct! " + q.explanation;
+        feedbackDiv.className = 'feedback correct';
+        show(nextBtn);
+      } else {
+        currentScore = 0;
+        feedbackDiv.textContent = "❌ Wrong! " + q.explanation + ' (You must restart!)';
+        feedbackDiv.className = 'feedback incorrect';
+        show(restartBtn);
+      }
+      setStatus();
+      timerStatus.style.display = 'none';
+    }
+
+    function handleTimeout() {
+      const q = questions[currentLevel];
+      feedbackDiv.textContent = "⏰ Time's up! " + q.explanation + ' (You must restart!)';
+      feedbackDiv.className = 'feedback incorrect';
+      currentScore = 0;
+      setStatus();
+      const btns = optionsDiv.querySelectorAll('button');
+      btns.forEach((btn, i) => {
+        btn.disabled = true;
+        if (i === q.correct) btn.classList.add('correct');
+      });
+      timerStatus.style.display = 'none';
+      show(restartBtn);
+    }
+
+    function restartQuiz() {
+      startQuiz();
+    }
+
+    function endGame() {
+      gameActive = false;
+      hide(optionsDiv);
+      hide(nextBtn);
+      hide(restartBtn);
+      hide(timerStatus);
+      progress.style.width = '100%';
+      questionDiv.innerHTML =
+        `<div style="font-size:1.5em; margin:10px 0;">🎉 Congratulations! 🎉</div>
+         <div style="margin:8px 0;">You've completed all levels!</div>
+         <strong>Final Score: ${currentScore} points</strong>`;
+      feedbackDiv.textContent = '';
+      setTimeout(() => {
+        let name = prompt("Enter your name for the leaderboard:") || "Anonymous";
+        updateLeaderboard(name, currentScore);
+        showLeaderboard();
+        show(restartBtn);
+      }, 600);
+    }
+
+    function loadLeaderboard() {
+      try {
+        return JSON.parse(localStorage.getItem('aiQuizLeaderboard') || '[]');
+      } catch { return []; }
+    }
+    function saveLeaderboard(data) {
+      try {
+        localStorage.setItem('aiQuizLeaderboard', JSON.stringify(data));
+      } catch {}
+    }
+    function updateLeaderboard(name, score) {
+      const board = loadLeaderboard();
+      board.push({ name, score });
+      board.sort((a,b)=>b.score-a.score);
+      saveLeaderboard(board.slice(0,5));
+    }
+    function showLeaderboard() {
+      const board = loadLeaderboard();
+      leaderboardList.innerHTML = board.length ? board.map((entry, i) =>
+        `<div class="leaderboard-item"><span>${i+1}. ${entry.name}</span><span>${entry.score}</span></div>`
+      ).join('') : "<div>No scores yet.</div>";
+      show(leaderboardDiv);
+    }
+    document.addEventListener('DOMContentLoaded', showLeaderboard);
+  </script>
+</body>
+</html>
